// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> AltinnRadioButtonGroup.tsx +++ Should match snapshot with all params  1`] = `
<div
  className="AltinnRadioGroup-altinnRadioGroupWrapper-2"
>
  <p
    className="MuiTypography-root AltinnRadioGroup-altinnRadioGroupDescription-3 MuiTypography-body1"
  >
    mock-description
  </p>
  <div
    className="MuiFormGroup-root AltinnRadioGroup-altinnRadioGroup-1 mock-classname MuiFormGroup-row"
    id="mock-id"
    role="radiogroup"
  />
</div>
`;

exports[`>>> AltinnRadioButtonGroup.tsx +++ Should match snapshot with the least amount of params 1`] = `
<div
  className="AltinnRadioGroup-altinnRadioGroupWrapper-2"
>
  <div
    className="MuiFormGroup-root AltinnRadioGroup-altinnRadioGroup-1"
    role="radiogroup"
  />
</div>
`;
